 . [NEW] CGPointExtensions: new add functions:  CGPointExtension like: clampf, ccpClamp, ccpFromSize,
			ccpCompOp, ccpLerp, ccpFuzzyEqual, ccpCompMult, ccpAngleSigned, ccpAngle,
			ccpRotateByAngle, ccpLineIntersect (issue #783)
 . [NEW] Chipmunk: updated to v5.2 (issue #784)
 . [NEW] Macros: added CCLOGINFO() and CCLOGERROR(). CCLOGINFO() disabled by default (issue #799)
 . [NEW] TMX: if layer contains cc_vertezx=automatic, tiles will use vertexZ and GL_ALPHA_TEST (issue #780)
 . [NEW] TMX: TMXLayer supports Tiled offset property (issue #616)
 . [NEW] TMX: Added support for .tsx tilesets (issue #619)
 . [NEW] Transition: new added transitions: CCRadialCCWTransition, CCRadialCWTransition (issue #783)
 . [FIX] All: cocos2d constants start with kCC. Change is backward compatible (issue #809)
 . [FIX] Actions: CCRepeat works smoothly, without jerks (re-fixed issue #390)
 . [FIX] Actions: CCAnimate frame calculation is more precise (issue #758)
 . [FIX] CocosDenshion: Fixed mute (issue #789)
 . [FIX] RenderTexture: removed limit when saving images (issue #782)
 . [FIX] RenderTexture: doesn't use GL_DITHER and restores glColorMask() (issue #796)
 . [FIX] Sprite, LabelAtlas, TiledMap: opactiy + color works even when the texture is premultiplied (issue #668)
 . [FIX] TMX: TMXTileMap supports any kind of objects, like CCSprite (issue #700, #765)
 . [FIX] TMX: TMXLayer uses the opacity defined for the layer (issue #785)
 . [FIX] TMX: TMXLayer raises exception if it receives the addChild message (issue #808)
 . [FIX] Texture2D: removed NSLog when image was NULL (issue #802)
 . [FIX] Xcode: hardware requirements in .plist: doesn't contain disabled features (issue #769)
 
version 0.99.0 - 18-Feb-2010
 . CocosDenshion: background music can loop (issue #774)
 . CocosDenshion: allow audio session category to be changed (issue #775)
 . CocosDenshion: can be initialized before cocos2d (issue #777, #773)

version 0.99.0-final - 15-Feb-2010
 . Box2d: updated to r58 (issue #494)