@@ -232,6 +232,9 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		patch for TileMapAtlas: it works with 255 tiles
 		patch for TextureMgr: supports directory within image names
 		patch: Added support for tsx tilesets in TMX tiled maps
+	* Robert J Payne (http://www.zwopple.com/)
+		Author of Zwoptex editor, support
+		Added support for left,right,top,bottom trim in CCSpriteFrameCache (patch).
 	* Rolandas Razma (gamebit):
 		added support for auto-remove-on-finish in particles
 		TMX maps support visibility and opacity patch
